# macchiato32

./: CMakeLists.txt  Kconfig  README.md  graphic.c  idf_component.yml  led.c  m32.c  palette.c  tiling.c
.github/workflows/: build.yml  publish.yml
display/: st7789.c  ws2812.c
examples/demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/demo/assets/m32-native/: 6ball.gdg  checkers.gdm  landscape.gdm  palette.gdp  tileset.gdt
examples/demo/assets/workfiles/: 6ball.ase  checkers.tmx  landscape.tmx  tileset.ase
examples/demo/main/: CMakeLists.txt  idf_component.yml  macchiato32_demo.c
include/macchiato32/: display.h  graphic.h  led.h  m32.h  m32_common.h  palette.h  tiling.h
io/: spi.c
priv_include/macchiato32/: m32_util.h
priv_include/macchiato32/display/: st7789.h  st7789_commands.h  ws2812.h
priv_include/macchiato32/io/: spi.h
